# pyfofem

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml  requirements-test.txt  requirements.txt
development/burnup_array/: burnup_array_calcs.py  burnup_array_kernel.py
development/burnup_array/tests/: test_consumption_calcs_array.py
docs/: CODEBASE.md  QUICK_START.md
docs/reference/code/burnup/: consumption_calcs_scalar.py
docs/reference/papers/burnup/: reference_literature.txt
docs/reference/papers/fofem/: reference_literature.txt
examples/: emissions_batch.py
pyfofem/: pyfofem.py
reference/fofem_cpp_overlay/: README.md
reference/fofem_cpp_overlay/patches/: CMakeLists.remote_to_local.patch
reference/fofem_cpp_overlay/source/: CMakeLists.txt  FOFEM_CPP_CODEBASE.md  compile_test.bat
reference/fofem_cpp_overlay/source/FOF_UNIX/: test_harness.cpp
src/pyfofem/: __init__.py  pyfofem.py  species_codes_lut.csv
src/pyfofem/components/: __init__.py  _component_helpers.py  burnup.py  burnup_calcs.py  consumption_calcs.py  emission_calcs.py  emission_pipeline.py  mortality_calcs.py  soil_heating.py  tree_flame_calcs.py
src/pyfofem/reference_data/: BC_SoilTexture_ConversionTo_FOFEM_SoilFamily.xlsx
src/pyfofem/reference_docs/: FOFEM_VariablesForBatchProcessing.xlsx
src/pyfofem/supporting_data/FOFEM6.7/: BM_Reference.rtf  CLB-FOFEM-Path.bat  FOF-UD.txt  FOFEM-Version-Notes.txt  Shortcut to Primary Output from FOF_GUI (Active).lnk  fof_saf.csv  (+1 more)
tests/: compare_cpp_python.py  compare_cpp_python_soil_heating.py  example_fofem_emissions_batch.py  example_fofem_emissions_fromGUI.py  fofem_emissions_example.py  prepare_cpp_reference.py  run_unified_tests.py  test_burnup_array.py  test_burnup_golden.py  test_compare_cpp_python.py  test_consumption_calcs_array.py  test_cpp_comparison.py  test_emission_equation_ids.py  test_equations_golden.py  test_run_fofem_emissions_output_keys.py  test_soil_heating_cpp_parity.py  test_soil_heating_invalid_soil_family.py
tests/test_data/test_golden_output/: Emis.txt  Emission-Short-Default-Pound.csv  Emission-Summary-Default-Pound.csv  burnup_load_golden.csv  burnup_timeseries_golden.csv  cpp_golden_components.csv  cpp_golden_summary.csv  emissions_test_fromGUI_golden.csv  equation_unit_tests_golden.csv
tests/test_data/test_inputs/: burnup_input.csv  cpp_comparison_cases.csv  fofem_emissions_test_fromGUI.csv  tmp_one_case.csv
(+1 files in other folders)
